# AGHFC-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/core/: database.py  firebase_auth.py  middleware.py
app/models/: collection_names.py  dish.py  firestore_ref.py  opinion.py  order.py  restaurant.py  restaurant_dish.py  special_offer.py  stock_item.py  user.py
app/routers/: restaurants.py
app/routers/dishes/: mobile.py  panel.py
app/routers/opinions/: mobile.py
app/routers/orders/: mobile.py  panel.py  worker_panel.py
app/routers/restaurant_dishes/: panel.py
app/routers/restaurants/: mobile.py  panel.py
app/routers/special_offers/: mobile.py  panel.py
app/routers/users/: mobile.py
app/routers/workers/: panel.py  worker_panel.py
app/services/orders/: mobile.py  shared.py  worker_panel.py
app/services/restaurants/: shared.py
app/services/shared/: request_handler.py  user_role_handler.py
app/services/special_offers/: mobile.py  panel.py
app/services/workers/: panel.py
app/tests/: conftest.py
app/tests/routers/restaurants/: test_mobile.py  test_panel.py
app/tests/services/orders/model/: test_finalize_users_loyalty_points.py
app/tests/services/orders/shared/: test_calculate_order_prices.py  test_check_order_validity_and_ownership.py  test_check_restaurant_dishes_existence.py  test_finalize_order_stock.py
app/tests/services/orders/worker_panel/: test_transition_order_status.py
